@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-2900] added spaces to "From:" and "To:" email headers (asaveljevs)
  - [ZBX-2894] fixed multiple references on same line in map labels (Vedmak)
  - [ZBX-2888] fixed host profiles export (Vedmak)
  - [ZBX-2890] fixed parsing of negative values in trigger expressions (Vedmak)
